@@ -9,6 +9,7 @@ Testing: More frequent re-aiming (each frame) (currently enabled on t1 bots/vehi
 Other:
  • Advplayerlist can auto collapse (default disabled) in options: Interface -> "Playerlist auto collapses"
  • Player camara tracking also limits view to players viewpoint and losmode
+ • Added option "Move Window Position"
  • Added option "Contain mouse inside window"
  • Removed "GroupMove" widget because it had side effects/downsides
  • Top bar: when low energy: red background, when overflowing: resource colored (see options or /resbartint to toggle)
